<?xml version="1.0"?>
<!--
 Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
 DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.

 The Universal Permissive License (UPL), Version 1.0

 Subject to the condition set forth below, permission is hereby granted to any
 person obtaining a copy of this software, associated documentation and/or
 data (collectively the "Software"), free of charge and under any and all
 copyright rights in the Software, and any and all patent rights owned or
 freely licensable by each licensor hereunder covering either (i) the
 unmodified Software as contributed to or provided by such licensor, or (ii)
 the Larger Works (as defined below), to deal in both

 (a) the Software, and

 (b) any piece of software and/or hardware listed in the lrgrwrks.txt file if
 one is included with the Software each a "Larger Work" to which the Software
 is contributed by such licensors),

 without restriction, including without limitation the rights to copy, create
 derivative works of, display, perform, and distribute the Software and make,
 use, sell, offer for sale, import, export, have made, and have sold the
 Software and the Larger Work(s), and to sublicense the foregoing rights on
 either these or other terms.

 This license is subject to the following condition:

 The above copyright notice and either this complete permission notice or at a
 minimum a reference to the UPL must be included in all copies or substantial
 portions of the Software.

 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mycompany.app</groupId>
    <artifactId>my-app</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>my-app</name>
    <url>http://maven.apache.org</url>
    <properties>
        <graalvm.version>24.1.0</graalvm.version>
        <compiler.dir>${project.build.directory}/compiler</compiler.dir>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.graalvm.polyglot</groupId>
            <artifactId>polyglot</artifactId>
            <version>${graalvm.version}</version>
        </dependency>
        <dependency>
            <groupId>org.graalvm.js</groupId>
            <artifactId>js-scriptengine</artifactId>
            <version>${graalvm.version}</version>
        </dependency>
        <!-- runtime -->
        <dependency>
            <groupId>org.graalvm.polyglot</groupId>
            <artifactId>js-community</artifactId>
            <version>${graalvm.version}</version>
            <type>pom</type>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.graalvm.polyglot</groupId>
            <artifactId>profiler-community</artifactId>
            <version>${graalvm.version}</version>
            <type>pom</type>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.graalvm.polyglot</groupId>
            <artifactId>inspect-community</artifactId>
            <version>${graalvm.version}</version>
            <type>pom</type>
            <scope>runtime</scope>
        </dependency>
        <!-- test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>jdk21</id>
            <activation>
                <jdk>[21,</jdk>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.graalvm.truffle</groupId>
                    <artifactId>truffle-compiler</artifactId>
                    <version>${graalvm.version}</version>
                    <scope>runtime</scope>
                </dependency>
                <dependency>
                    <groupId>org.graalvm.truffle</groupId>
                    <artifactId>truffle-runtime</artifactId>
                    <version>${graalvm.version}</version>
                    <scope>runtime</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.2.5</version>
                        <configuration>
                            <argLine>-XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI --add-exports=java.base/jdk.internal.misc=jdk.graal.compiler --upgrade-module-path=${compiler.dir}</argLine>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <version>3.6.1</version>
                        <executions>
                            <execution>
                                <id>copy</id>
                                <phase>process-test-classes</phase>
                                <goals>
                                    <goal>copy</goal>
                                </goals>
                                <configuration>
                                    <artifactItems>
                                        <artifactItem>
                                            <groupId>org.graalvm.compiler</groupId>
                                            <artifactId>compiler</artifactId>
                                            <version>${graalvm.version}</version>
                                            <type>jar</type>
                                            <overWrite>true</overWrite>
                                        </artifactItem>
                                        <artifactItem>
                                            <groupId>org.graalvm.compiler</groupId>
                                            <artifactId>compiler-management</artifactId>
                                            <version>${graalvm.version}</version>
                                            <type>jar</type>
                                            <overWrite>true</overWrite>
                                        </artifactItem>
                                        <artifactItem>
                                            <groupId>org.graalvm.truffle</groupId>
                                            <artifactId>truffle-api</artifactId>
                                            <version>${graalvm.version}</version>
                                            <type>jar</type>
                                            <overWrite>true</overWrite>
                                        </artifactItem>
                                        <artifactItem>
                                            <groupId>org.graalvm.truffle</groupId>
                                            <artifactId>truffle-compiler</artifactId>
                                            <version>${graalvm.version}</version>
                                            <type>jar</type>
                                            <overWrite>true</overWrite>
                                        </artifactItem>
                                        <artifactItem>
                                            <groupId>org.graalvm.polyglot</groupId>
                                            <artifactId>polyglot</artifactId>
                                            <version>${graalvm.version}</version>
                                            <type>jar</type>
                                            <overWrite>true</overWrite>
                                        </artifactItem>
                                    </artifactItems>
                                    <outputDirectory>${compiler.dir}</outputDirectory>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>default-cli</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <arguments>
                                        <argument>--module-path</argument>
                                        <!-- automatically creates the modulepath using all project dependencies -->
                                        <modulepath/>
                                        <argument>-XX:+UnlockExperimentalVMOptions</argument>
                                        <argument>-XX:+EnableJVMCI</argument>
                                        <argument>--add-exports=java.base/jdk.internal.misc=jdk.graal.compiler</argument>
                                        <argument>--upgrade-module-path=${compiler.dir}</argument>
                                        <argument>-m</argument>
                                        <argument>com.mycompany.app/com.mycompany.app.App</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>nograal</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <arguments>
                                        <argument>--module-path</argument>
                                        <!-- automatically creates the modulepath using all project dependencies -->
                                        <modulepath/>
                                        <argument>com.mycompany.app.App</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>${JAVA_HOME}/bin/java</executable>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jlink-plugin</artifactId>
                        <version>3.1.0</version>
                        <configuration>
                            <!-- Note: jlink is only supported beginning with GraalVM 23.1.0. -->
                            <!-- Note: in 23.1.x, the jdk.graal.compiler modules were named jdk.internal.vm.compiler and jdk.internal.vm.compiler.management, respectively. -->
                            <addModules>
                                <module>com.mycompany.app</module>
                                <module>jdk.graal.compiler</module>
                                <module>jdk.graal.compiler.management</module>
                                <module>org.graalvm.truffle</module>
                                <module>org.graalvm.truffle.compiler</module>
                                <module>org.graalvm.truffle.runtime</module>
                            </addModules>
                            <modulePaths>
                                <!-- Not required if JAVA_HOME contains LibGraal. -->
                                <modulePath>${compiler.dir}</modulePath>
                            </modulePaths>
                            <launcher>
                                myapp=com.mycompany.app/com.mycompany.app.App
                            </launcher>
                            <addOptions>
                                <addOption>"-XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI --add-exports=java.base/jdk.internal.misc=jdk.graal.compiler"</addOption>
                            </addOptions>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <target>17</target>
                    <source>17</source>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <arguments>
                                <argument>--module-path</argument>
                                <!-- automatically creates the modulepath using all project dependencies -->
                                <modulepath/>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <executable>${JAVA_HOME}/bin/java</executable>
                    <arguments>
                        <argument>--module-path</argument>
                        <!-- automatically creates the modulepath using all project dependencies -->
                        <modulepath/>
                        <argument>com.mycompany.app.App</argument>
                    </arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.mycompany.app.App</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                    <id>enforce-maven</id>
                    <goals>
                        <goal>enforce</goal>
                    </goals>
                    <configuration>
                        <rules>
                            <requireMavenVersion>
                                <version>3.2.5</version>
                            </requireMavenVersion>
                        </rules>
                    </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
